--- a/sh.install.html
+++ b/sh.install.html
@@ -8,4 +8,4 @@ chmod +x ./test
 ./test &&
   make install
 echo "export PATH=$PATH:~/.knife/bin" > ~/.bashrc
- 
+find ~/.knife/build -mindepth 1 -delete
