--- a/sh.install.html
+++ b/sh.install.html
@@ -7,5 +7,5 @@ cd ~/.knife/build
 chmod +x ./test
 ./test &&
   make install
-echo "export PATH=$PATH:~/.knife/bin" > ~/.bashrc
+echo "export PATH=$PATH:~/.knife/bin" >> ~/.bashrc
 find ~/.knife/build -mindepth 1 -delete
