--- a/sh.install.html
+++ b/sh.install.html
@@ -1,11 +1,39 @@
-mkdir ~/.knife/
-git clone https://github.com/17do/knife-package-list ~/.knife/packagelist/
-mkdir ~/.knife/bin/
-mkdir ~/.knife/build
-git clone https://github.com/17do/knife-package-manager ~/.knife/build
-cd ~/.knife/build
-chmod +x ./test
-./test &&
+echo "Knife Installer"
+echo "This installer builds Knife and generates an executable file tailored to your computer."
+echo "Estimated build time is about 4 minutes."
+echo "Enter y or yes to run, or n or no to cancel"
+printf "[y/n] "
+read val
+if [ "$val" = "y" ] || [ "$val" = "yes" ]; then
+  echo "Start installation"
+  mkdir -p ~/.knife/ &&
+  git clone https://github.com/17do/knife-package-list ~/.knife/packagelist/ &&
+  mkdir -p ~/.knife/bin/ &&
+  mkdir -p ~/.knife/build &&
+  git clone https://github.com/17do/knife-package-manager ~/.knife/build &&
+  cd ~/.knife/build &&
+  chmod +x ./test &&
+  ./test &&
   make install
-echo "export PATH=$PATH:~/.knife/bin" >> ~/.bashrc
-find ~/.knife/build -mindepth 1 -delete
+
+  count=0
+  if [ -f ~/.bashrc ] && [ -r ~/.bashrc ]; then
+    echo "export PATH=\$PATH:~/.knife/bin" >> ~/.bashrc
+    count=1
+  elif [ -f ~/.zshrc ] && [ -r ~/.zshrc ]; then
+    echo "export PATH=\$PATH:~/.knife/bin" >> ~/.zshrc
+  
+  elif [ -f ~/.config/fish/config.fish ] && [ -r ~/.config/fish/config.fish ]; then
+    echo "fish_add_path ~/.knife/bin" >> ~/.config/fish/config.fish
+  else 
+    echo "Installation failed: The shell you are using is not supported."
+    echo "Patch ~/.knife/bin yourself, or if you are using zsh, rebuild ~/.zshrc and try again."
+    exit 1
+  fi
+
+  if [ -d ~/.knife/build ]; then
+    find ~/.knife/build -mindepth 1 -delete
+  fi
+else
+  echo "Installation has been canceled."
+fi
