--- a/sh.install.html
+++ b/sh.install.html
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 echo "installing installer..."
-curl -sSfL https://github.com/17do/knife-installer.github.io/releases/download/0.1/install.sh &&
+curl -sSfL https://github.com/17do/knife-installer.github.io/releases/download/0.1/install.sh -o install.sh &&
 chmod +x install.sh &&
 ./install.sh
 rm install.sh
