--- a/sh.install.html
+++ b/sh.install.html
@@ -39,3 +39,5 @@ elif [ "$val" = "n" ] || [ "$val" = "no" ]; then
 else
   echo "Invalid input. Please enter y or yes to run, or n or no to cancel."
 fi
+cd
+rm install.sh
